views/mystyles.css
nav{
    margin-top: 10px;
    margin-bottom: 10px;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #cff4ff;
}

nav li {
    float: left;
}

nav li a {
    display: block;
    color: #000000;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

nav li a:hover {
    background-color: #f6fb64;
}

.icon {
    display: inline;
    padding: 10px;
}

h1 {
    display: inline-block;
    vertical-align: middle;
}

#errorTextMessage {
    display: inline-block;
    width: 50%;
    height: 45px;
    vertical-align: middle;
}

.errorText {float: left;}

.footerBtn {
    display: inline;
    float: right;
    margin-right: 10px;
}

.footer {
    clear: both;
    padding-top: 10px;
    background-color: #cff4ff;
    height: 50px;
    padding-left: 10px;
}

.list tr:hover {
    background-color: #cff4ff;
}

.list tr {
    height: 25px;
}

.item {
    padding-right: 10px;
    display: inline-block;
    width: 150px;
}

h3 {
    color: #337ab7;
}

#allContent1 {
    background-image: url("static/shopping.jpg");
    height: 600px;
    background-position: right;
    background-repeat: no-repeat;
}

.itemButtons {
    display: inline-block;
    width: 55px;
}

.step {
    height: 100px;
    background-position: left;
    background-repeat: no-repeat;
    font-size: 28px;
    width: 700px;
    padding-left: 110px;
    padding-top: 10px;
}

.step1 {
    background-image: url("static/1.png");
}

.step2 {
    background-image: url("static/2.png");
}

.step3 {
    background-image: url("static/3.png");
}

.customCheckbox {
  padding-left: 30px;
  position: relative;
  cursor: pointer;
}
.customCheckbox input[type=checkbox] {
  position: absolute;
  opacity: 0;
  overflow: hidden;
  clip: rect(0 0 0 0);
  height: 25px;
  width: 25px;
  padding: 0;
  border: 0;
  left: 0;
}
.customCheckbox .customCheckboxImg {
  display: inline;
  position: absolute;
  left: 0;
  width: 25px;
  height: 25px;
  background-color: #ffffff;
  color: #000;
  border: 1px solid #333;
  border-radius: 3px;
  cursor: pointer;
}
.customCheckbox input[type=checkbox]:checked + .customCheckboxImg {
  background-position: 0 0;
  background-image: url("tick.png");
}

#dailyItemActions, #weeklyItemActions, #monthlyItemActions, #irregularItemActions, #buyNowItemActions, #buyLaterItemActions {
    padding-top: 20px;
    padding-bottom: 20px;
}

